--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
 table {
   max-width: 700px;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
 }
 
 .column1 {
   width: 70%;
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: 500;
 }
 
 .column2 {
@@ -12,6 +26,6 @@ table {
 }
 table span {
   display: inline-block;
-  width: 10%;
-  border-bottom: 1px solid #000;
+  min-width: 10%;
+  border-bottom: 0.5px solid #000;
 }
