--- a/style.css
+++ b/style.css
@@ -12,8 +12,12 @@ table {
   max-width: 700px;
   width: 100%;
   font-family: "Montserrat", sans-serif;
+  border-collapse: collapse;
 }
-
+td {
+  border-right: 1px solid #000;
+  padding: 5px;
+}
 .column1 {
   width: 70%;
   font-size: 17px;
