--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ table span {
   min-width: 10%;
   border-bottom: 0.5px solid #000;
 }
+.n-wrapp {
+  display: flex;
+}
+.n-end {
+  position: relative;
+  top: 20px;
+  border: none;
+}
