--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ td {
 }
 .column2 {
   width: 30%;
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: 500;
 }
 table span {
   display: inline-block;
@@ -47,6 +50,8 @@ table span {
   border: none;
 }
 .n-price {
+  font-size: 15px;
+  line-height: 18px;
   color: red;
   padding-left: 5px;
   box-sizing: border-box;
