--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ td {
 table span {
   display: inline-block;
   min-width: 10%;
-  border-bottom: 0.5px solid #000;
+  border-bottom: 0.1px solid #000;
 }
 .n-wrapp {
   display: flex;
@@ -55,4 +55,11 @@ table span {
   color: red;
   padding-left: 5px;
   box-sizing: border-box;
+  flex-grow: 1;
+  min-width: 0;
+}
+.content-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
