--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ td {
 }
 .column1 {
   width: 70%;
-  font-size: 17px;
+  font-size: 18px;
   line-height: 20px;
   font-weight: 500;
 }
@@ -31,7 +31,7 @@ td {
 }
 .column2 {
   width: 30%;
-  font-size: 17px;
+  font-size: 18px;
   line-height: 20px;
   font-weight: 500;
 }
@@ -50,10 +50,11 @@ table span {
   border: none;
 }
 .n-price {
+  font-weight: 400;
   font-size: 15px;
   line-height: 18px;
-  color: red;
-  padding-left: 5px;
+  color: #000;
+  padding-left: 10px;
   box-sizing: border-box;
   flex-grow: 1;
   min-width: 0;
@@ -62,4 +63,7 @@ table span {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+.n-bold {
+  font-weight: bold;
 }
