--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f1f7e6;
+}
+@media print {
+  body,
+  html {
+    height: auto; /* Убедитесь, что высота контента автоматически подстраивается */
+  }
+}
+@media print {
 }
 h1,
 h2,
@@ -21,10 +28,12 @@ ul {
   display: flex;
   flex-direction: column;
   padding: 10px 10px 20px 10px;
+  background-color: #f1f7e6;
 }
 .n-top {
   width: 100%;
   display: flex;
+  margin-bottom: 10px;
 }
 .n-top-item {
   display: flex;
@@ -57,7 +66,7 @@ table {
 }
 td {
   border-right: 1px solid #000;
-  padding: 5px;
+  padding: 0px 5px 0px 5px;
 }
 .column1 {
   width: 70%;
