--- a/style.css
+++ b/style.css
@@ -4,7 +4,14 @@ body {
 @media print {
   body,
   html {
-    height: auto; /* Убедитесь, что высота контента автоматически подстраивается */
+    height: auto;
+    page-break-inside: avoid;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  .n-wrapp {
+    flex-basis: 50%;
+    /* padding: 5px 5px 5px 5px !important; */
   }
 }
 @media print {
@@ -23,11 +30,14 @@ ul {
   padding: 0;
   margin: 0;
 }
+.n-container {
+  display: flex;
+}
 .n-wrapp {
   max-width: 700px;
   display: flex;
   flex-direction: column;
-  padding: 10px 10px 20px 10px;
+  padding: 10px 20px;
   background-color: #f1f7e6;
 }
 .n-top {
@@ -60,7 +70,7 @@ ul {
   height: 15px;
 }
 .n-table {
-  max-width: 700px;
+  /* max-width: 600px; */
   width: 100%;
   border-collapse: collapse;
   border-right: 1px solid #000;
