--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   }
   .n-wrapp {
     flex-basis: 50%;
-    /* padding: 5px 5px 5px 5px !important; */
+    padding: 10px !important;
   }
 }
 @media print {
@@ -37,7 +37,7 @@ ul {
   max-width: 700px;
   display: flex;
   flex-direction: column;
-  padding: 10px 20px;
+  padding: 20px;
   background-color: #f1f7e6;
 }
 .n-top {
