--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ ul {
   max-width: 700px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 20px 10px;
 }
 .n-top {
   width: 100%;
@@ -78,29 +78,14 @@ td {
   border-right: 1px solid #000;
   padding: 0px 5px 0px 5px;
 }
-.n-top-data {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.n-top-inner {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-.n-data-item {
-  width: fit-content;
-  white-space: nowrap;
-  font-size: 18px;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  border-right: none;
-}
 .column1 {
   width: 70%;
   font-size: 18px;
   font-weight: 500;
+}
+.n-column1 {
+  width: 50%;
+  border-right: none;
 }
 .col-item {
   display: flex;
