--- a/style.css
+++ b/style.css
@@ -83,10 +83,7 @@ td {
   font-size: 18px;
   font-weight: 500;
 }
-.n-column1 {
-  width: 50%;
-  border-right: none;
-}
+
 .col-item {
   display: flex;
   align-items: center;
@@ -106,7 +103,7 @@ td {
   position: relative;
   top: 20px;
   left: 50px;
-  border: none;
+  border: none !important;
 }
 .n-price {
   font-weight: 400;
