--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ ul {
   display: flex;
   height: 100%;
 }
+.n-indent {
+  margin-right: 20px;
+}
 .n-wrapp {
   max-width: 700px;
   display: flex;
@@ -97,6 +100,9 @@ td {
   display: inline-block;
   min-width: 10%;
   border-bottom: 0.1px solid #000;
+}
+.n-top-price {
+  min-width: 30% !important;
 }
 .n-end {
   position: relative;
