--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ ul {
 .n-contact-item img {
   width: 20px;
   height: 15px;
+  border-radius: 4px;
 }
 .n-table {
   width: 100%;
@@ -121,7 +122,7 @@ td:nth-child(even) {
 .n-table span {
   display: inline-block;
   min-width: 10%;
-  border-bottom: 0.1px solid #5c5b5b70;
+  border-bottom: 0.05px solid #000000a6;
 }
 
 .n-end {
